force-app/main/default/objects/aecm__Capability_Domain__c/aecm__Capability_Domain__c.object-meta.xml
<CustomObject>
    <description>Container for a top level or L1 capability. This is a parent to L2 Capability Areas.</description>
    <label>Capability Domain</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capability Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>