force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Capability_Area_Count__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Area_Count__c</fullName>
    <inlineHelpText>Count of Capability Areas under this domain.</inlineHelpText>
    <label>Capability Areas</label>
    <summaryFilterItems>
        <field>aecm__Capability_Area__c.aecm__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>aecm__Capability_Area__c.aecm__Capability_Domain__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>