force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <inlineHelpText>Provide a description for this capability domain that explains its purpose and underlying structures.</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>