force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Function__c.field-meta.xml
<CustomField>
    <fullName>aecm__Function__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Parent function for this capability domain.</inlineHelpText>
    <label>Functional Unit</label>
    <referenceTo>aecm__Functional_Unit__c</referenceTo>
    <relationshipLabel>Capability Domains</relationshipLabel>
    <relationshipName>Capability_Domains</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>