force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Improvement_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Improvement_Priority_Score__c</fullName>
    <formula>aecm__Improvement_Priority_Score_Rollup__c /  aecm__Capability_Area_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Improvement Priority Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>