force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Maturity_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Maturity_Score__c</fullName>
    <formula>(aecm__Maturity_Score_Rollup__c /  aecm__Capability_Area_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rollup of the Maturity Score divided by the Capability Area Count</inlineHelpText>
    <label>Maturity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>