force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Maturity_Score_Rollup__c.field-meta.xml
<CustomField>
    <fullName>aecm__Maturity_Score_Rollup__c</fullName>
    <description>Rollup of maturity score across all active related capabilities.</description>
    <inlineHelpText>Rollup of maturity score across all active related capabilities.</inlineHelpText>
    <label>Maturity Score Rollup</label>
    <summarizedField>aecm__Capability_Area__c.aecm__Maturity_Score__c</summarizedField>
    <summaryForeignKey>aecm__Capability_Area__c.aecm__Capability_Domain__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>