force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Overall_Score__c</fullName>
    <formula>/* find the average of the roll up fields by dividing by the count of the Capability Areas under the domain*/
aecm__Overall_Score_Rollup__c / aecm__Capability_Area_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>