force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Proactivity_Index_Score_Rollup__c.field-meta.xml
<CustomField>
    <fullName>aecm__Proactivity_Index_Score_Rollup__c</fullName>
    <label>Proactivity Index Score Rollup</label>
    <summarizedField>aecm__Capability_Area__c.aecm__Proactivity_Index_Score__c</summarizedField>
    <summaryForeignKey>aecm__Capability_Area__c.aecm__Capability_Domain__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>