force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Rollup_Process_Costs__c.field-meta.xml
<CustomField>
    <fullName>aecm__Rollup_Process_Costs__c</fullName>
    <label>Rollup Process Costs</label>
    <summarizedField>aecm__Capability_Area__c.aecm__Effort_Cost__c</summarizedField>
    <summaryForeignKey>aecm__Capability_Area__c.aecm__Capability_Domain__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>