force-app/main/default/objects/aecm__Capability_Domain__c/fields/aecm__Sum_of_Process_cost__c.field-meta.xml
<CustomField>
    <fullName>aecm__Sum_of_Process_cost__c</fullName>
    <description>Process cost at Capability domain record level in the hierarchy will show the sum of “Process cost” on linked capability areas.</description>
    <inlineHelpText>Process cost at Capability domain record level in the hierarchy will show the sum of “Process cost” on linked capability areas.</inlineHelpText>
    <label>Sum of Process cost</label>
    <summarizedField>aecm__Capability_Area__c.aecm__Sum_of_Process_cost__c</summarizedField>
    <summaryForeignKey>aecm__Capability_Area__c.aecm__Capability_Domain__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>