force-app/main/default/objects/aecm__Capability_Domain__c/listViews/aecm__All.listView-meta.xml
<ListView>
    <fullName>aecm__All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Function__c</columns>
    <columns>aecm__Improvement_Plan__c</columns>
    <columns>aecm__Maturity_Score__c</columns>
    <columns>aecm__Overall_Score__c</columns>
    <columns>aecm__Rollup_Process_Costs__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>aecm__Capability_Area_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>